refactor(domain): rewrite exception messages, add emoji